# rpm-package-function

./: .flake8  .gitignore  CHANGELOG.md  README.md  function_app.py  pyproject.toml  pytest.ini  rg.bicep  rg_add_eventgrid.bicep  rg_funcapp.bicep
.devcontainer/: Dockerfile.dnf  devcontainer.json
.github/workflows/: ci.yml
rpm_package_function/: __init__.py  organiser.py  repomanager.py  rpmpackage.py  utils.py
rpm_package_function/tooling/: __init__.py  advice.py  bicep_deployment.py  create_resources.py  func_app.py  resource_group.py
tests/: conftest.py  test_rpf.py
